// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 jLfFwi Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 1
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 2
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 3
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 4
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 5
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 gOxAef Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 jLfFwi Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 1
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 2
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 3
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 1
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 2
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 3
        </p>
      </section>
    </button>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Controls__ControlsWrapper-sc-1j3u9np-1 dvNLMU"
    disabled={false}
    id={null}
    style={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 1
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 2
        </p>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kaCTht Controls__ControlButton-sc-1j3u9np-0 gVGlQK"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 eyZlVj Button__LabelWrapper-sc-1v7sls2-1 bLwYSt"
        id={null}
        rows={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Control 3
        </p>
      </section>
    </button>
  </section>
</div>
`;
